--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-
+# Spring properties
+spring.application.name=warehouse
+spring.datasource.driver-class-name=org.postgresql.Driver
+# Sesuaikan port dan nama databasenya
+# database db_small_region harus dibuat terlebih dahulu
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_warehouse
+# username postgres
+spring.datasource.username=postgres
+# password postgres
+spring.datasource.password=root
+# ddl seperti create table akan terbentuk otomatis
+spring.jpa.hibernate.ddl-auto=update
+# dialect yang digunakan adalah postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
+server.port=9090
